<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Test1</string>
    <string name="scan">Scan code</string>
    <string name="hello">中国科学院信息工程研究所</string>
    <string name="welcome">欢迎来到本系统</string>
    <string name="login">登录</string>
    <string name="rem_or_not">记住密码</string>
    <string name="show_or_not">显示密码</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="close_window">关闭</string>
    <string name="conf_login">确定</string>
    <string name="cle_login">取消</string>
    <string name="hint_confirm_login">登录确认</string>
    <string name="error_hint">校验错误</string>
</resources>
